<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".appinfo.AppInfoFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/uiToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/ToolbarTheme"
        />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uiToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:orientation="vertical">


            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/margin_small"
                android:text="@string/app_name"
                android:layout_marginBottom="@dimen/margin_normal"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/margin_small"
                android:text="@string/powered_by"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/margin_small"
                android:linksClickable="true"
                android:autoLink="all"
                android:text="@string/financialmodelingprep"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/margin_small"
                android:text="@string/newsapi"
                android:linksClickable="true"
                android:autoLink="all"
                android:layout_marginBottom="@dimen/margin_normal"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/margin_small"
                android:text="@string/source_code"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/margin_small"
                android:text="@string/github_link"
                android:layout_marginBottom="@dimen/margin_normal"
                android:linksClickable="true"
                android:autoLink="all"
                />

            <TextView
                android:id="@+id/uiVersion"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/margin_small"
                tools:text="Version 1.0"
                />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>