<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/uiAppbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:stateListAnimator="@animator/toolbar_show_animation"
            android:animateLayoutChanges="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/uiToolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/colorPrimary"
                app:statusBarScrim="@color/colorPrimaryDark"
                app:collapsedTitleGravity="center"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="false"
                app:toolbarId="@id/uiToolbar">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/detailImage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detailed_image_height"
                    android:adjustViewBounds="false"
                    android:scaleType="fitCenter"
                    android:transitionName="transitionImageView"
                    app:layout_collapseMode="parallax"
                    tools:background="#99ff0000"
                    tools:src="@drawable/ic_stocks"
                    />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/uiScrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:padding="@dimen/margin_normal"
                >

                <GridLayout
                    android:id="@+id/uiContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:rowCount="6"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:columnCount="2">

                    <TextView
                        android:id="@+id/uiCompanyNameLabel"
                        android:layout_height="wrap_content"
                        android:layout_width="0dip"
                        android:layout_columnWeight="1"
                        style="@style/TextViewLabel"
                        android:text="@string/company_name"
                        />

                    <TextView
                        android:id="@+id/uiCompanyName"
                        android:layout_height="wrap_content"
                        android:layout_width="0dip"
                        android:layout_columnWeight="2"
                        tools:text="Apple inc"
                        />

                    <TextView
                        android:id="@+id/uiDescriptioniLabel"
                        android:layout_height="wrap_content"
                        android:layout_width="0dip"
                        style="@style/TextViewLabel"
                        android:layout_columnWeight="1"
                        android:text="@string/description"
                        />

                    <TextView
                        android:id="@+id/uiDescriptioni"
                        android:layout_height="wrap_content"
                        android:layout_width="0dip"
                        android:layout_columnWeight="2"
                        tools:text="Apple Inc is designs, manufactures and markets mobile communication and media devices and personal computers, and sells a variety of related software, services, accessories, networking solutions and third-party digital content and applications."
                        />

                    <TextView
                        android:id="@+id/uiCEOLabel"
                        android:layout_height="wrap_content"
                        android:layout_width="0dip"
                        style="@style/TextViewLabel"
                        android:layout_columnWeight="1"
                        android:text="@string/ceo"
                        />

                    <TextView
                        android:id="@+id/uiCEO"
                        android:layout_height="wrap_content"
                        android:layout_width="0dip"
                        android:layout_columnWeight="2"
                        tools:text="Timothy D. Cook"
                        />

                    <TextView
                        android:id="@+id/uiLastDividendsLabel"
                        android:layout_height="wrap_content"
                        android:layout_width="0dip"
                        style="@style/TextViewLabel"
                        android:layout_columnWeight="1"
                        android:text="@string/last_div"
                        />

                    <TextView
                        android:id="@+id/uiLastDividends"
                        android:layout_height="wrap_content"
                        android:layout_width="0dip"
                        android:layout_columnWeight="2"
                        tools:text="2.92"
                        />

                    <TextView
                        android:id="@+id/uiSectorLabel"
                        android:layout_height="wrap_content"
                        android:layout_width="0dip"
                        style="@style/TextViewLabel"
                        android:layout_columnWeight="1"
                        android:text="@string/sector"
                        />

                    <TextView
                        android:id="@+id/uiSector"
                        android:layout_height="wrap_content"
                        android:layout_width="0dip"
                        android:layout_columnWeight="2"
                        tools:text="Technology"
                        />

                    <TextView
                        android:id="@+id/uiIndustryLabel"
                        android:layout_height="wrap_content"
                        android:layout_width="0dip"
                        style="@style/TextViewLabel"
                        android:layout_columnWeight="1"
                        android:text="@string/industry"
                        />

                    <TextView
                        android:id="@+id/uiIndustry"
                        android:layout_height="wrap_content"
                        android:layout_width="0dip"
                        android:layout_columnWeight="2"
                        tools:text="Computer Hardware"
                        />

                    <TextView
                        android:id="@+id/uiWebsiteLabel"
                        android:layout_height="wrap_content"
                        android:layout_width="0dip"
                        style="@style/TextViewLabel"
                        android:layout_columnWeight="1"
                        android:text="@string/website"
                        />

                    <TextView
                        android:id="@+id/uiWebsite"
                        android:layout_height="wrap_content"
                        android:layout_width="0dip"
                        android:layout_columnWeight="2"
                        tools:text="http://www.apple.com"
                        />

                </GridLayout>

                <ProgressBar
                    android:id="@+id/uiProgressBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <TextView
                    android:id="@+id/uiMessage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="Error Message" />


                <TextView
                    android:id="@+id/uiNewsHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/uiContent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:padding="@dimen/margin_small"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    tools:text="@string/news_header_normal"
                    />

                <LinearLayout
                    android:id="@+id/uiNewsContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/uiNewsHeader"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:orientation="vertical"
                    android:animateLayoutChanges="true"
                    >

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/uiFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:tint="@android:color/white"
            app:layout_anchor="@id/uiAppbar"
            app:layout_anchorGravity="bottom|end"
            app:srcCompat="@drawable/ic_favorite_border_24px" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>